Transaction integration